--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
-        <package.generated>com.thepuar.filemeta.contract.endpoint</package.generated>
+        <package.generated>com.thepuar.watchdog.contract.endpoint</package.generated>
     </properties>
     <dependencies>
 
@@ -124,7 +124,7 @@
                             <goal>generate</goal>
                         </goals>
                         <configuration>
-                            <inputSpec>${project.basedir}/../schemas/openapi-watchdog.yml</inputSpec>
+                            <inputSpec>${project.basedir}/../../schemas/openapi-watchdog.yml</inputSpec>
                             <output>${project.build.directory}/generated-sources</output>
                             <generatorName>spring</generatorName>
                             <apiPackage>${package.generated}.api</apiPackage>
